# muviz

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/shaders/: HitMapVertex.glsl  LineVertex.glsl  MainFragment.glsl  MainVertex.glsl  NewMainFragment.glsl  NewMainVertex.glsl  SkyboxVertex.glsl
cmake/: CMakeLists.txt.external
configs/: bella_stack.json  event_count_example.json  realtime_example.json  reconstructor_test.json  tbdaqtest.json  test.json  tracking_test.json  truncated_test.json
data/: test_chip1_data.raw  test_chip2_data.raw
glad/include/glad/: glad.h
src/: CMakeLists.txt
src/Events/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h  ParticleEvent.h
src/Events/Base/: KeyCodes.h  MouseCodes.h
src/OpenGL/: Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h
src/OpenGL/Object/: Cube.cpp  Cube.h
src/OpenGL/Scene/: Chip.cpp  Chip.h  Curve.cpp  Curve.h  Detector.cpp  Detector.h  Mesh.cpp  Mesh.h  Scene.h  Skybox.cpp  Skybox.h
src/Window/: GUIWindows.cpp  GUIWindows.h  Window.cpp  Window.h  glWindow.cpp  glWindow.h  imguiWindow.h  imguiWindows.cpp  imguiWindows.h
src/Window/GUIWindows/: Profiler.h
src/core/: Application.cpp  Application.h  CorryWrapperTest.cpp  EventReconstructionTest.cpp  datareader_test.cpp  header.h  main.cpp  test.cpp
src/datasets/: AllDataLoaders.cpp  CorryWrapper.cpp  EventReconstructor.cpp  SocketReceiver.cpp  SocketSubscriber.cpp  YarrBinary.cpp  YarrBinaryFile.cpp
src/datasets/include/: AllDataLoaders.h  ClassRegistry.h  CorryWrapper.h  DataBase.h  EventReconstructor.h  SocketReceiver.h  SocketSubscriber.h  YarrBinary.h  YarrBinaryFile.h
src/util/: CircularBuffer.cpp  FEBookie.cpp  cli.cpp  logging.cpp  mathtools.cpp  util.cpp
src/util/include/: CircularBuffer.h  ClipBoard.h  FEBookie.h  cli.h  json.hpp  logging.h  mathtools.h  util.hpp
